FIX : French commentary change to English commentary #8

--- a/src/views/quiz.ejs
+++ b/src/views/quiz.ejs
@@ -9,7 +9,7 @@
     <p id="countryName" name="countryName">debug : <%= countryName %></p>
     <img src="<%= flagURL %>" alt="Drapeau">
 
-    <!-- Formulaire pour collecter la réponse -->
+    <!-- Answer form -->
     <form action="/quiz" method="post">
         <label for="answer">Réponse :</label>
         <input type="hidden" id="countryName" name="countryName" value="<%= countryName %>">
